# wav-jepa

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: plan.md
src/wav_jepa_minimal/: __init__.py  audio.py  config.py  defaults.py  knn.py  masking.py  model.py  train.py
