[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wav-jepa-minimal"
version = "0.1.0"
description = "Minimal WavJEPA-style self-supervised training with KNN evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "tensorboard>=2.16",
]

[project.optional-dependencies]
dev = ["ruff>=0.5"]

[project.scripts]
wavjepa-train = "wav_jepa_minimal.train:main"
wavjepa-knn = "wav_jepa_minimal.knn:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
